src/styles/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: #dadadb;
  padding: 0 0;
  background-color: #1d1e20;
}

a {
  text-decoration: none;
  color: white;
}

/* herosection */
.hero-container {
  position: relative;
  height: 100vh;
  width: 80vw;
  margin-left: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.hero-container h2 {
  font-size: 3rem;
  font-weight: 600;
  text-align: center;
}

.hero-container .hero-text p {
  font-size: 2.5rem;
  font-weight: 400;
  text-align: center;
}

/* about */
.about-container {
  padding: 2%;
  background-color: #1d1e20c8;
}

.about-container h2 {
  font-size: 3rem;
  text-decoration: underline;
  text-decoration-color: #3776ab;
  font-weight: 600;
  margin-bottom: 1rem;
}

.about-text {
  font-size: 2rem;
  font-weight: 400;
  margin-bottom: 1rem;
}

/* skills */
.skills-container {
  margin-top: 2%;
  padding: 2%;
  background-color: #1d1e20c8;
  height: 25rem;
}

.skills-container h2 {
  font-size: 3rem;
  text-decoration: underline;
  text-decoration-color: #3776ab;
  font-weight: 600;
  margin-bottom: 1rem;
  margin-left: 10px;
}

.skills-container h3 {
  font-size: 3rem;
  text-decoration: underline;
  text-decoration-color: #3776ab;
  font-weight: 600;
  margin-bottom: 1rem;
  margin-left: 10px;
}

.skills-container p {
  color: #3776ab;
}

/*carousel*/

.wrapper {
  display: flex;
  justify-content: center;
}
.scene {
  width: 200px;
  height: -300px;
  perspective: 500px;
  position: relative;
}
.scene .carousel.keen-slider {
  width: -50%;
  height: 50%;
  position: relative;
  overflow: visible;
  transform: translateZ(10px);
  transform-style: preserve-3d;
}
.carousel__cell {
  position: absolute;
  text-align: center;
}
.keen-slider__slide {
  text-align: center;
}

/* projects */
.projects-container {
  margin-top: 2%;
  padding: 2%;
  background-color: #1d1e20c8;
}

.projects-container h2 {
  font-size: 3rem;
  text-decoration: underline;
  text-decoration-color: #3776ab;
  font-weight: 600;
  margin-bottom: 1rem;
  margin-left: 10px;
}

.projects-flex {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-around;
  gap: 5%;
  margin: 5%;
}

.project-card {
  height: 350px;
  width: 250px;
  border: 1px solid #e6e6e6;
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.119);
  background-size: 100% 50%;
  transition: 0.5s ease-in;
  margin-bottom: 5%;
  text-align: center;
}

.project-card:hover {
  transition: 0.5s ease;
  background-size: 150% 150%;
  background-position: 70%;
  box-shadow: 0px 0px 27px 10px rgba(220, 220, 220, 0.514);
}

.project-card .project-header {
  margin-top: 175px;
  height: 50%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.716);
}

.project-card .project-header:hover {
  background-color: rgba(0, 0, 0, 0.785);
  border-radius: 5px;
}

.project-card .project-header h3 {
  font-size: 1.2rem;
}

.project-card .project-header p {
  font-size: 1.2rem;
  margin-bottom: 10px;
  color: #b3b3b3;
}

.project-time {
  color: white;
}

.project-card a {
  text-decoration: underline;
  text-decoration-color: #e34f26;
}

/* contact */
.contact-container {
  margin-top: 2%;
  padding: 2%;
  background-color: #1d1e20c8;
}

.contact-container h2 {
  font-size: 3rem;
  text-decoration: underline;
  text-decoration-color: #3776ab;
  font-weight: 600;
  margin-bottom: 1rem;
}

.contact-container p {
  font-size: 2rem;
  font-weight: 400;
  margin-bottom: 1rem;
}

.contact-form {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-top: 10%;
  font-size: 1.5rem;
}

form input[type="text"] {
  font-size: 25px;
  text-align: center;
  width: 50%;
  max-width: 500px;
  height: auto;
  border-radius: 5px;
  border: 3px #000000 solid;
  margin: 1% 0%;
}

form input[type="email"] {
  font-size: 25px;
  text-align: center;
  width: 60%;
  max-width: 600px;

  height: auto;
  border-radius: 5px;
  border: 3px #000000 solid;
  margin: 1% 0%;
}

#textarea {
  font-size: 25px;
  text-align: center;
  width: 70%;
  max-width: 700px;

  height: auto;
  border-radius: 5px;
  border: 3px #000000 solid;
  margin: 1% 0%;
}

#submit {
  background: #00000078;
  color: white;
  border: 1px white solid;
  height: auto;
  width: 50%;
  max-width: 500px;

  border-radius: 5px;
  font-size: 30px;
  text-shadow: none;
  margin: 3% 0%;
}

#submit:hover {
  border-color: #3776ab;
  cursor: pointer;
  color: #3776ab;
}

/* footer */
.footer-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-top: 2%;
  background-color: rgba(0, 0, 0, 0.934);
}

.footer-container .social_icons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 3rem;
}

.footer-container .social_icons a:hover {
  transform: scale(1.1);
  transition-duration: 0.4s;
}

.hide {
  display: none;
}

.icon_hide:hover .hide {
  display: block;
  font-size: 2rem;
  position: absolute;
  top: -3rem;
  left: 3rem;
  color: #3776ab;
}

.footer-impressum {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0 1rem;
  font-size: 1.2rem;
  margin-bottom: 2rem;
}

.footer-impressum a:hover {
  color: #3776ab;
}

.styled-back-link {
  position: fixed;
  left: 3%;
  top: 3%;
  background-color: #3776ab;
  border-radius: 5px;
  font-size: 2rem;
  text-decoration: underline;
  padding: 5px;
}

.center-container-CV {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-top: 5%;
}

